refactor :  Map.of -> Collections.singletonMap 변경